lib/tests/fixtures/compiler/evaluation/new_invalid_param_hash.pp
notice Hash[Integer, Integer]([foo, bar])
